testsuite/tests/checks/too_many_dependencies/test.out
pack1-flag.ads:9:1: error: too_many_dependencies - rule violation
9 | package Pack1.Flag is
  | ^^^^^^^^^^^^^^^ 

